<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="pt.ulisboa.tecnico.sise.insure.app.activities.ClaimDetailActivity">
    <Button
        android:id="@+id/btn_logout"
        android:layout_width="115dp"
        android:layout_height="wrap_content"
        android:drawableLeft="@android:drawable/ic_menu_close_clear_cancel"
        android:text="@string/btn_logout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.908"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023" />

    <TextView
        android:id="@+id/detailed_information_claim"
        android:layout_width="275dp"
        android:layout_height="45dp"
        android:layout_marginTop="44dp"
        android:fontFamily="monospace"
        android:text="@string/detailed_information_claim"
        android:textColor="#040303"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_logout"
        app:layout_constraintVertical_bias="0.326" />

    <View
        android:id="@+id/view"
        android:layout_width="50mm"
        android:layout_height="4dip"
        android:background="#AAA5A5"
        android:fontFamily="monospace"
        android:paddingBottom="10dip"
        app:layout_constraintBottom_toTopOf="@+id/detailed_inf_back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_logout"
        app:layout_constraintVertical_bias="0.188" />

    <TextView
        android:id="@+id/claim_information"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="monospace"
        android:text="@string/claim_information"
        android:textColor="#AAA5A5"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/detailed_inf_back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view"
        app:layout_constraintVertical_bias="0.0" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="50mm"
        android:layout_height="295dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/detailed_inf_back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/claim_information"
        app:layout_constraintVertical_bias="0.75">

        <TextView
            android:id="@+id/claim_detailed_title"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:fontFamily="monospace"
            android:textSize="15sp"
            android:text="@string/title"
            android:textColor="#101010" />

        <TextView
            android:id="@+id/claim_id"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:fontFamily="monospace"
            android:textSize="15sp"
            android:text="@string/claim_ids"
            android:textColor="#101010" />

        <TextView
            android:id="@+id/claim_status"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:fontFamily="monospace"
            android:textSize="15sp"
            android:text="@string/claim_statuss"
            android:textColor="#101010" />

        <TextView
            android:id="@+id/issuing_date"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:fontFamily="monospace"
            android:textSize="15sp"
            android:text="@string/issuing_date"
            android:textColor="#101010" />

        <TextView
            android:id="@+id/plate"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:fontFamily="monospace"
            android:textSize="15sp"
            android:text="@string/plate"
            android:textColor="#101010" />

        <TextView
            android:id="@+id/claim_description"
            android:layout_width="match_parent"
            android:layout_height="71dp"
            android:fontFamily="monospace"
            android:textSize="15sp"
            android:text="@string/claim_description"
            android:textColor="#101010" />
    </LinearLayout>

    <Button
        android:id="@+id/detailed_inf_back"
        android:layout_width="115dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:layout_weight="1"
        android:drawableLeft="@android:drawable/ic_menu_revert"
        android:text="@string/detailed_inf_back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>