<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".NewInsuranceClaimActivity">

        <Button
            android:id="@+id/btn_logout"
            android:layout_width="115dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="63dp"
            android:drawableLeft="@android:drawable/ic_menu_close_clear_cancel"
            android:text="@string/btn_logout"
            app:layout_constraintBottom_toTopOf="@+id/new_claim_insurance"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.915"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/new_claim_insured"
            android:layout_width="366dp"
            android:layout_height="39dp"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="16dp"
            android:fontFamily="monospace"
            android:text="@string/new_claim_insurance"
            android:textColor="#040303"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/view3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.644"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_logout"
            app:layout_constraintVertical_bias="1.0" />

        <View
            android:id="@+id/view3"
            android:layout_width="50mm"
            android:layout_height="4dip"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:background="#AAA5A5"
            android:paddingBottom="10dip"
            app:layout_constraintBottom_toTopOf="@+id/new_claim_insurance_info"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.493"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/new_claim_insured" />

        <TextView
            android:id="@+id/new_claim_insurance_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="48dp"
            android:fontFamily="monospace"
            android:text="@string/new_claim_insurance_ind"
            android:textColor="#AAA5A5"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view3" />

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="366dp"
            android:layout_height="321dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/new_claim_btn_create"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_logout"
            app:layout_constraintVertical_bias="0.87">

            <EditText
                android:id="@+id/new_claim_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/editTextBackground"
                android:ems="10"
                android:fontFamily="monospace"
                android:hint="Title"
                android:inputType="textPersonName"
                android:textColor="#101010"
                android:verticalScrollbarPosition="right" />

            <Spinner
                android:id="@+id/new_claim_plate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/editTextBackground"
                android:ems="10"
                android:fontFamily="monospace"
                android:hint="Plate Number"
                android:inputType="number|textPersonName"
                android:textColor="#101010" />

            <EditText
                android:id="@+id/new_claim_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/editTextBackground"
                android:ems="10"
                android:fontFamily="monospace"
                android:hint="Occurrence Date"
                android:inputType="date"
                android:textColor="#101010" />

            <EditText
                android:id="@+id/new_claim_desc"
                android:layout_width="match_parent"
                android:layout_height="230dp"
                android:layout_weight="2"
                android:background="?attr/editTextBackground"
                android:ems="10"
                android:fontFamily="monospace"
                android:gravity="start|top"
                android:hint="Claim Description"
                android:inputType="textMultiLine"
                android:textColor="#101010" />
        </LinearLayout>

        <Button
            android:id="@+id/profile_btn_back"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableLeft="@android:drawable/ic_menu_revert"
            android:text="@string/new_claim_back"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.245"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.957" />

        <Button
            android:id="@+id/new_claim_btn_create"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableLeft="@android:drawable/ic_menu_save"
            android:text="@string/new_claim_create"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.754"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.957" />
        >
    </android.support.constraint.ConstraintLayout>
</LinearLayout>